--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "~6.0.9",
-    "@react-navigation/native": "~6.0.6",
-    "@react-navigation/stack": "~6.0.11",
-    "expo": "^45.0.0",
-    "expo-asset": "~8.5.0",
-    "expo-constants": "~13.1.1",
-    "expo-font": "~10.1.0",
-    "expo-linking": "~3.1.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-web-browser": "~10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "version": "1.0.0",
-  "private": true,
-  "name": "app"
+	"dependencies": {
+		"@expo/vector-icons": "^13.0.0",
+		"@react-native-community/masked-view": "0.1.10",
+		"@react-navigation/bottom-tabs": "~6.0.9",
+		"@react-navigation/native": "~6.0.6",
+		"@react-navigation/stack": "~6.0.11",
+		"expo": "^45.0.0",
+		"expo-asset": "~8.5.0",
+		"expo-constants": "~13.1.1",
+		"expo-font": "~10.1.0",
+		"expo-linking": "~3.1.0",
+		"expo-splash-screen": "~0.15.1",
+		"expo-status-bar": "~1.3.0",
+		"expo-web-browser": "~10.2.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-native": "0.68.2",
+		"react-native-gesture-handler": "~2.2.1",
+		"react-native-reanimated": "~2.8.0",
+		"react-native-safe-area-context": "4.2.4",
+		"react-native-screens": "~3.11.1",
+		"react-native-web": "0.17.7"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9"
+	},
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"version": "1.0.0",
+	"private": true,
+	"name": "whatsapp"
 }
